singleton Add multithreading

--- a/Singleton/.vscode/settings.json
+++ b/Singleton/.vscode/settings.json
@@ -62,7 +62,8 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "random": "cpp"
     },
     "better-comments.highlightPlainText": true
 }
